More small cleanups.

--- a/app/views/identities/decide.html.erb
+++ b/app/views/identities/decide.html.erb
@@ -39,8 +39,8 @@
 	<% end %>
       </table>
 
-      <input type="submit" name="yes" value="yes" />
-      <input type="submit" name="no" value="no" />
+      <input type="submit" name="result" value="yes" />
+      <input type="submit" name="result" value="no" />
     </form>
   </body>
 </html>
