--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta http-equiv="X-XRDS-Location" content="<%= xrds_user_url %>" />
     <link rel="openid.server" href="<%= index_url %>" />
   </head>
   <body>
