Mapped the main server end point to the root url.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="X-XRDS-Location" content="<%= xrds_user_url %>" />
-    <link rel="openid.server" href="<%= index_url %>" />
+    <link rel="openid.server" href="<%= root_url %>" />
   </head>
   <body>
     <p>
