--- a/app/views/decisions/new.html.erb
+++ b/app/views/decisions/new.html.erb
@@ -1,6 +1,6 @@
-<h3>Ruby OpenID Server Example</h3>
+<h3>Confirm ID Request</h3>
 
-<form method="post" action="<%= decision_url %>">
+<form method="post" action="<%= decisions_url %>">
   <input type="submit" name="result" value="yes" />
   <input type="submit" name="result" value="no" />
 </form>
