Started adding validations for user registration page.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,7 +28,7 @@
     <%= f.input :fname, :label => 'First Name' %>
     <%= f.input :sname, :label => 'Last Name' %>
     <%= f.input :email, :label => 'Email Address' %>
-    <%= f.input :email_verify, :label => 'Re-type Email Address' %>
+    <%= f.input :email_confirmation, :label => 'Re-type Email Address' %>
     <%= f.input :position, :as => :select,
                 :collection => @user.position_options %>
     <%= f.input :otherpd, :label => 'Other Position' %>
