Added some coffeescript to hide fields selectively depending on user inputs.

--- a/app/views/layouts/registration.html.erb
+++ b/app/views/layouts/registration.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>OpenidDemo</title>
     <%= stylesheet_link_tag :all %>
-    <%= javascript_include_tag 'rails' %>
+    <%= javascript_include_tag 'jquery', 'rails', 'application' %>
     <%= csrf_meta_tag %>
   </head>
   <body>
