Display radio buttons side-by-side.

--- a/app/views/layouts/registration.html.erb
+++ b/app/views/layouts/registration.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>OpenidDemo</title>
-    <%= stylesheet_link_tag :all %>
+    <%= stylesheet_link_tag 'formtastic', 'application' %>
     <%= javascript_include_tag 'jquery', 'rails', 'application' %>
     <%= csrf_meta_tag %>
   </head>
