Added pagination to search results, added support for composite primary keys used by some Nesstar tables

--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -1,5 +1,4 @@
-<%# TODO: maybe formtasticise this %>
-<%= form_for :search, :url => user_search_path do |f| %>
+<%= form_for :search, :url => user_search_path, :html => {:method => :get} do |f| %>
   <p><%= f.text_field :q %></p>
   <p>
     <%= f.submit "Search by username" %>
