--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,30 +30,53 @@
   <h2>Category A Datasets</h2>
 
 
-  <% [{:name => :pending, :data => @user.permissions_a.pending}, {:name => :accessible, :data => @user.permissions_a.accessible}].each do |status| %>
+  <% [{:name => :pending, :data => @datasetsPending}, {:name => :accessible, :data => @datasetsAccessible}].each do |status| %>
     <% unless status[:data].empty? %>
       <h3><%= status[:name].capitalize %> datasets</h3>
       <table id="<%= status[:name] %>">
-        <tr><th>Dataset ID</th><th>Dataset Name</th><th><%= status[:name] == :accessible ? "Revoke Permission" : "Add" %></th><th>Delete</th></tr>
         <% status[:data].each do |permission| %>
+          <tr><th>Dataset ID</th><th colspan="2">Dataset Name</th><th><%= status[:name] == :accessible ? "Revoke Permission" : "Add" %></th><th>Delete</th></tr>
           <tr>
             <td><%= permission.datasetID %></td>
-            <td><%= permission.access_level.datasetname %></td>
+            <td colspan="2"><%= permission.access_level.datasetname %></td>
             <td>
-              <% if status[:name] == :accessible %>
+              <% if status[:name] == :accessible && permission.user_has_access %>
                 <%= link_to user_permissions_a_path(@user.user, permission.datasetID, :type => 'revoke'), :method => :delete do %>
                   <%= image_tag "button_drop.png", :alt => "revoke" %>
                 <% end %>
-              <% else %>
+              <% elsif status[:name] == :pending %>
                 TODO
               <% end %>
-           </td>
+            </td>
             <td>
               <%= link_to user_permissions_a_path(@user.user, permission.datasetID), :method => :delete do %>
                 <%= image_tag "button_drop.png", :alt => "delete" %>
               <% end %>
             </td>
           </tr>
+
+          <% files = AccessLevel.files_for_dataset(permission.datasetID) %>
+          <% unless files.empty? %>
+            <!-- Files -->
+            <tr>
+              <th></th>
+              <th>File Content</th>
+              <th>File ID</th>
+              <th>Access Level</th>
+              <th>Grant Download</th>
+            </tr>
+            <% files.each do |file| %>
+              <tr>
+                <td></td>
+                <td><%= file.fileContent %></td>
+                <td><%= file.fileID %></td>
+                <td><%= file.accessLevel %></td>
+                <td>TODO</td>
+              </tr>
+            <% end %>
+          <% end %>
+
+          <tr><td></td><td></td><td></td><td></td></tr>
         <% end %>
       </table>
     <% end %>
